Fix negative form margins resulting in out of view form

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,3 +15,8 @@
  */
  @import "bootstrap-sprockets";
  @import "bootstrap";
+
+.form-margin-fix{
+  margin-left: 15px;
+  margin-right: 15px;
+}
